fix(confirmation): fix left alignment

--- a/packages/confirmation/src/components/base-confirmation/index.module.css
+++ b/packages/confirmation/src/components/base-confirmation/index.module.css
@@ -5,4 +5,8 @@
     max-width: 388px;
     margin: var(--gap-0) auto;
     color: var(--color-light-text-secondary);
+
+    &.alignLeft {
+        margin: unset;
+    }
 }
